fix: Remove campo duplicado especialidade, mantém apenas categoria
- Remove campo 'especialidade' do formulário de expositores
- Mantém apenas 'categoria' com opções expandidas
- Corrige mapeamento de campos no editExpositor
- Adiciona mais opções de categoria (Gastronomia, Produtor Rural, etc.)

--- a/ceart-cms/public/index.html
+++ b/ceart-cms/public/index.html
@@ -626,8 +626,8 @@
                         <input type="text" class="form-control" name="nome" required>
                     </div>
                     <div class="form-group">
-                        <label class="form-label">Especialidade</label>
-                        <select class="form-control" name="especialidade" required>
+                        <label class="form-label">Categoria</label>
+                        <select class="form-control" name="categoria" required>
                             <option value="">Selecione...</option>
                             <option value="Cerâmica">Cerâmica</option>
                             <option value="Marcenaria">Marcenaria</option>
@@ -637,6 +637,10 @@
                             <option value="Bordado">Bordado</option>
                             <option value="Escultura">Escultura</option>
                             <option value="Couro">Couro</option>
+                            <option value="Gastronomia">Gastronomia</option>
+                            <option value="Produtor Rural">Produtor Rural</option>
+                            <option value="Economia Criativa">Economia Criativa</option>
+                            <option value="Outros">Outros</option>
                         </select>
                     </div>
                     <div class="form-group">
