--- a/ceart-cms/public/index.html
+++ b/ceart-cms/public/index.html
@@ -486,15 +486,32 @@
 
         <!-- Tab: Galeria -->
         <div id="galeria-tab" class="tab-content">
+            <!-- Gerenciar Galerias (Coleções) -->
             <div class="card">
                 <div class="card-header">
-                    <h2 class="card-title"><i class="fas fa-images"></i> Galeria de Imagens</h2>
-                    <button class="btn btn-primary" onclick="openModal('galeriaModal')">
-                        <i class="fas fa-plus"></i> Nova Imagem
+                    <h2 class="card-title"><i class="fas fa-folder-open"></i> Galerias (Coleções)</h2>
+                    <button class="btn btn-primary" onclick="openModal('novaGaleriaModal')">
+                        <i class="fas fa-plus"></i> Nova Galeria
                     </button>
                 </div>
-                <div id="galeriaList" class="grid grid-3">
-                    <!-- Lista de imagens da galeria -->
+                <div id="galeriasCollectionList" class="list">
+                    <!-- Lista de galerias/coleções -->
+                </div>
+            </div>
+            
+            <!-- Gerenciar Fotos da Galeria Selecionada -->
+            <div class="card" id="galeriaItensCard" style="display: none;">
+                <div class="card-header">
+                    <div>
+                        <h2 class="card-title"><i class="fas fa-images"></i> <span id="galeriaSelectedTitle">Fotos</span></h2>
+                        <p class="card-subtitle" id="galeriaSelectedDesc"></p>
+                    </div>
+                    <button class="btn btn-primary" onclick="openModal('novaImagemModal')">
+                        <i class="fas fa-plus"></i> Nova Foto
+                    </button>
+                </div>
+                <div id="galeriaItensList" class="grid grid-3">
+                    <!-- Lista de fotos da galeria -->
                 </div>
             </div>
         </div>
@@ -746,30 +763,26 @@
         </div>
     </div>
 
-    <!-- Modal: Nova Imagem Galeria -->
-    <div id="galeriaModal" class="modal">
+    <!-- Modal: Nova Galeria (Coleção) -->
+    <div id="novaGaleriaModal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h3><i class="fas fa-image"></i> Nova Imagem da Galeria</h3>
-                <span class="close" onclick="closeModal('galeriaModal')">&times;</span>
+                <h3><i class="fas fa-folder-plus"></i> Nova Galeria</h3>
+                <span class="close" onclick="closeModal('novaGaleriaModal')">&times;</span>
             </div>
-            <form id="galeriaForm" enctype="multipart/form-data">
+            <form id="novaGaleriaForm">
                 <div class="form-group">
-                    <label class="form-label">Título</label>
-                    <input type="text" class="form-control" name="titulo" required placeholder="Nome da obra/peça">
+                    <label class="form-label">Título da Galeria *</label>
+                    <input type="text" class="form-control" name="titulo" required placeholder="Ex: Feira CEART 2025">
+                </div>
+                <div class="form-group">
+                    <label class="form-label">Descrição</label>
+                    <textarea class="form-control" name="descricao" rows="3" placeholder="Breve descrição sobre esta edição da feira"></textarea>
                 </div>
                 <div class="grid grid-2">
                     <div class="form-group">
-                        <label class="form-label">Categoria</label>
-                        <select class="form-control" name="categoria" required>
-                            <option value="geral">Geral</option>
-                            <option value="ceramica">Cerâmica</option>
-                            <option value="textil">Têxtil</option>
-                            <option value="madeira">Madeira</option>
-                            <option value="metal">Metal</option>
-                            <option value="fibras">Fibras</option>
-                            <option value="outros">Outros</option>
-                        </select>
+                        <label class="form-label">Data do Evento</label>
+                        <input type="date" class="form-control" name="data_evento">
                     </div>
                     <div class="form-group">
                         <label class="form-label">Ordem de Exibição</label>
@@ -777,8 +790,37 @@
                     </div>
                 </div>
                 <div class="form-group">
+                    <label class="form-label">
+                        <input type="checkbox" name="ativo" checked> Galeria Ativa
+                    </label>
+                </div>
+                <button type="submit" class="btn btn-primary">
+                    <i class="fas fa-save"></i> Criar Galeria
+                </button>
+            </form>
+        </div>
+    </div>
+
+    <!-- Modal: Nova Imagem (Foto) -->
+    <div id="novaImagemModal" class="modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3><i class="fas fa-image"></i> Nova Foto</h3>
+                <span class="close" onclick="closeModal('novaImagemModal')">&times;</span>
+            </div>
+            <form id="novaImagemForm" enctype="multipart/form-data">
+                <input type="hidden" name="galeria_id" id="galeriaIdInput">
+                <div class="form-group">
+                    <label class="form-label">Título da Foto</label>
+                    <input type="text" class="form-control" name="titulo" placeholder="Nome da obra/peça">
+                </div>
+                <div class="form-group">
                     <label class="form-label">Descrição</label>
                     <textarea class="form-control" name="descricao" rows="3" placeholder="Descrição da peça, técnica utilizada, artesão..."></textarea>
+                </div>
+                <div class="form-group">
+                    <label class="form-label">Ordem de Exibição</label>
+                    <input type="number" class="form-control" name="ordem" value="0" min="0">
                 </div>
                 <div class="form-group">
                     <label class="form-label">Imagem</label>
