--- a/ceart-cms/public/index.html
+++ b/ceart-cms/public/index.html
@@ -427,14 +427,12 @@
     </header>
 
     <div class="container">
-        <!-- Estatísticas -->
-        <div class="stats-grid" id="statsContainer">
-            <!-- Stats serão carregadas via JS -->
-        </div>
-
         <!-- Navegação por Abas -->
         <div class="nav-tabs">
-            <button class="nav-tab active" onclick="showTab('expositores')">
+            <button class="nav-tab active" onclick="showTab('dashboard')">
+                <i class="fas fa-home"></i> Dashboard
+            </button>
+            <button class="nav-tab" onclick="showTab('expositores')">
                 <i class="fas fa-users"></i> Expositores
             </button>
             <button class="nav-tab" onclick="showTab('posts')">
@@ -454,8 +452,105 @@
             </button>
         </div>
 
+        <!-- Tab: Dashboard -->
+        <div id="dashboard-tab" class="tab-content active">
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="card-title"><i class="fas fa-chart-line"></i> Bem-vindo ao CEART CMS</h2>
+                </div>
+                <div style="text-align: center; padding: 2rem;">
+                    <i class="fas fa-palette" style="font-size: 4rem; color: #4CAF50; margin-bottom: 1rem;"></i>
+                    <h3 style="color: #333; margin-bottom: 1rem;">Sistema de Gerenciamento de Conteúdo</h3>
+                    <p style="color: #666; font-size: 1.1rem; max-width: 600px; margin: 0 auto 2rem;">
+                        Gerencie todos os aspectos da Feira Cultural de Arte e Artesanato CEART através deste painel administrativo.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Estatísticas -->
+            <div class="stats-grid" id="statsContainer">
+                <!-- Stats serão carregadas via JS -->
+            </div>
+
+            <!-- Ações Rápidas -->
+            <div class="card">
+                <div class="card-header">
+                    <h2 class="card-title"><i class="fas fa-bolt"></i> Ações Rápidas</h2>
+                </div>
+                <div class="grid grid-3">
+                    <div class="item-card" onclick="showTab('expositores'); openModal('expositorModal')" style="cursor: pointer;">
+                        <div style="text-align: center; padding: 1rem;">
+                            <i class="fas fa-user-plus" style="font-size: 2.5rem; color: #4CAF50; margin-bottom: 1rem;"></i>
+                            <h4 style="margin-bottom: 0.5rem;">Novo Expositor</h4>
+                            <p style="color: #666; font-size: 0.9rem;">Cadastrar novo artesão ou expositor</p>
+                        </div>
+                    </div>
+                    <div class="item-card" onclick="showTab('posts'); openModal('postModal')" style="cursor: pointer;">
+                        <div style="text-align: center; padding: 1rem;">
+                            <i class="fas fa-edit" style="font-size: 2.5rem; color: #4CAF50; margin-bottom: 1rem;"></i>
+                            <h4 style="margin-bottom: 0.5rem;">Novo Post</h4>
+                            <p style="color: #666; font-size: 0.9rem;">Publicar notícia ou artigo no blog</p>
+                        </div>
+                    </div>
+                    <div class="item-card" onclick="showTab('galeria'); openModal('novaGaleriaModal')" style="cursor: pointer;">
+                        <div style="text-align: center; padding: 1rem;">
+                            <i class="fas fa-images" style="font-size: 2.5rem; color: #4CAF50; margin-bottom: 1rem;"></i>
+                            <h4 style="margin-bottom: 0.5rem;">Nova Galeria</h4>
+                            <p style="color: #666; font-size: 0.9rem;">Criar nova galeria de fotos</p>
+                        </div>
+                    </div>
+                    <div class="item-card" onclick="showTab('carrossel'); openModal('carrosselModal')" style="cursor: pointer;">
+                        <div style="text-align: center; padding: 1rem;">
+                            <i class="fas fa-sliders-h" style="font-size: 2.5rem; color: #4CAF50; margin-bottom: 1rem;"></i>
+                            <h4 style="margin-bottom: 0.5rem;">Novo Slide</h4>
+                            <p style="color: #666; font-size: 0.9rem;">Adicionar slide ao carrossel</p>
+                        </div>
+                    </div>
+                    <div class="item-card" onclick="showTab('regulamento'); openModal('regulamentoModal')" style="cursor: pointer;">
+                        <div style="text-align: center; padding: 1rem;">
+                            <i class="fas fa-gavel" style="font-size: 2.5rem; color: #4CAF50; margin-bottom: 1rem;"></i>
+                            <h4 style="margin-bottom: 0.5rem;">Regulamento</h4>
+                            <p style="color: #666; font-size: 0.9rem;">Gerenciar regulamento da feira</p>
+                        </div>
+                    </div>
+                    <div class="item-card" onclick="showTab('configuracoes')" style="cursor: pointer;">
+                        <div style="text-align: center; padding: 1rem;">
+                            <i class="fas fa-cog" style="font-size: 2.5rem; color: #4CAF50; margin-bottom: 1rem;"></i>
+                            <h4 style="margin-bottom: 0.5rem;">Configurações</h4>
+                            <p style="color: #666; font-size: 0.9rem;">Ajustes gerais do site</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Dicas e Informações -->
+            <div class="card" style="background: linear-gradient(135deg, #e8f5e8 0%, #f0f8f0 100%);">
+                <div class="card-header">
+                    <h2 class="card-title"><i class="fas fa-lightbulb"></i> Dicas de Uso</h2>
+                </div>
+                <div class="grid grid-2">
+                    <div>
+                        <h4 style="color: #4CAF50; margin-bottom: 0.5rem;"><i class="fas fa-check-circle"></i> Navegação</h4>
+                        <p style="color: #666; line-height: 1.6;">Use as abas acima para navegar entre as diferentes seções do CMS. Cada seção permite gerenciar um tipo específico de conteúdo.</p>
+                    </div>
+                    <div>
+                        <h4 style="color: #4CAF50; margin-bottom: 0.5rem;"><i class="fas fa-check-circle"></i> Estatísticas</h4>
+                        <p style="color: #666; line-height: 1.6;">Os cards coloridos mostram um resumo do conteúdo cadastrado. Clique nas abas para ver detalhes completos.</p>
+                    </div>
+                    <div>
+                        <h4 style="color: #4CAF50; margin-bottom: 0.5rem;"><i class="fas fa-check-circle"></i> Atalhos</h4>
+                        <p style="color: #666; line-height: 1.6;">Use Ctrl+N para novo expositor, Ctrl+P para novo post, e ESC para fechar modais.</p>
+                    </div>
+                    <div>
+                        <h4 style="color: #4CAF50; margin-bottom: 0.5rem;"><i class="fas fa-check-circle"></i> Ajuda</h4>
+                        <p style="color: #666; line-height: 1.6;">Cada formulário possui dicas de formatação. Passe o mouse sobre os ícones de informação para mais detalhes.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <!-- Tab: Expositores -->
-        <div id="expositores-tab" class="tab-content active">
+        <div id="expositores-tab" class="tab-content">
             <div class="card">
                 <div class="card-header">
                     <h2 class="card-title"><i class="fas fa-users"></i> Gerenciar Expositores</h2>
