--- a/ceart-cms/public/index.html
+++ b/ceart-cms/public/index.html
@@ -1203,6 +1203,24 @@ Conectando artesãos, empreendedores e a comunidade</textarea>
                     </div>
                 </div>
 
+                <!-- Segurança -->
+                <div class="form-section">
+                    <h3><i class="fas fa-lock"></i> Segurança</h3>
+                    <div class="grid grid-2">
+                        <div class="form-group">
+                            <label class="form-label">Senha Atual</label>
+                            <input type="password" class="form-control" id="currentPassword" placeholder="Digite sua senha atual">
+                        </div>
+                        <div class="form-group">
+                            <label class="form-label">Nova Senha</label>
+                            <input type="password" class="form-control" id="newPassword" placeholder="Digite a nova senha (mínimo 6 caracteres)">
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-secondary" onclick="changePassword()">
+                        <i class="fas fa-key"></i> Alterar Senha
+                    </button>
+                </div>
+
                 <button class="btn btn-primary" onclick="saveConfiguracoes()">
                     <i class="fas fa-save"></i> Salvar Todas as Configurações
                 </button>
