--- a/ceart-cms/public/index.html
+++ b/ceart-cms/public/index.html
@@ -1355,15 +1355,14 @@ Conectando artesãos, empreendedores e a comunidade</textarea>
                 <div class="grid grid-3">
                     <div class="form-group">
                         <label class="form-label">Categoria</label>
-                        <select class="form-control" name="categoria" required>
-                            <option value="">Selecione...</option>
-                            <option value="Artesanato">Artesanato</option>
-                            <option value="Empreendedorismo">Empreendedorismo</option>
-                            <option value="Sustentabilidade">Sustentabilidade</option>
-                            <option value="Cultura">Cultura</option>
-                            <option value="Design">Design</option>
-                            <option value="Eventos">Eventos</option>
-                        </select>
+                        <input 
+                            type="text" 
+                            class="form-control" 
+                            name="categoria" 
+                            required 
+                            placeholder="Ex: Artesanato, Eventos, Cultura..."
+                        >
+                        <small class="form-text">Digite livremente a categoria do post</small>
                     </div>
                     <div class="form-group">
                         <label class="form-label">Autor</label>
