fix(cms): corrige upload de imagem do post (imagem_destaque), data_publicacao e bugs do admin.js

--- a/ceart-cms/public/index.html
+++ b/ceart-cms/public/index.html
@@ -1375,7 +1375,7 @@ Conectando artesãos, empreendedores e a comunidade</textarea>
                 </div>
                 <div class="form-group">
                     <label class="form-label">Imagem de Destaque</label>
-                    <input type="file" class="form-control" name="imagem" accept="image/*">
+                    <input type="file" class="form-control" name="imagem_destaque" accept="image/*">
                     <small class="form-text">Recomendado: 1200x600px para melhor qualidade</small>
                 </div>
                 <div class="form-group">
