--- a/ceart-cms/public/index.html
+++ b/ceart-cms/public/index.html
@@ -785,6 +785,22 @@
     </style>
 </head>
 <body>
+
+    <style>
+        .notification {
+            transition: opacity 0.3s;
+            pointer-events: none;
+        }
+        .notification-success {
+            background: #4caf50 !important;
+        }
+        .notification-error {
+            background: #f44336 !important;
+        }
+        .notification-info {
+            background: #2196f3 !important;
+        }
+    </style>
     <header class="header">
         <div>
             <h1><i class="fas fa-palette"></i> CEART CMS</h1>
