fix(blog): padroniza exibição da tag de categoria e imagem default nos cards
- Usa imagem SVG default quando não há imagem de destaque no post
- Garante que a tag de categoria sempre aparece no mesmo local sobre a imagem (default ou enviada)
- Corrige inconsistências de layout nos cards do blog

--- a/ceart-cms/public/index.html
+++ b/ceart-cms/public/index.html
@@ -1393,6 +1393,12 @@ Conectando artesãos, empreendedores e a comunidade</textarea>
                     <label class="form-label">Imagem de Destaque</label>
                     <input type="file" class="form-control" name="imagem_destaque" accept="image/*">
                     <small class="form-text">Recomendado: 1200x600px para melhor qualidade</small>
+                    <div id="imagemDestaquePreviewContainer" style="display: none; margin-top: 10px;">
+                        <img id="imagemDestaquePreview" src="" alt="Pré-visualização" class="image-preview" style="max-width: 100%; border-radius: 8px; margin-bottom: 8px;" />
+                        <button type="button" id="btnRemoverImagemDestaque" class="btn btn-danger" style="display: block; margin-top: 5px;">
+                            <i class="fas fa-trash"></i> Remover Imagem
+                        </button>
+                    </div>
                         <!-- Preview e Remoção da Imagem de Destaque -->
                         <div id="imagemDestaquePreviewContainer" style="display:none; margin-top:10px;">
                             <img id="imagemDestaquePreview" src="" alt="Pré-visualização da Imagem de Destaque" class="image-preview" style="max-width:200px; max-height:150px; display:block; margin-bottom:8px;" />
